--- a/01. PARTIE LEGISLATIVE/Article L3120-2 - 29530537.md
+++ b/01. PARTIE LEGISLATIVE/Article L3120-2 - 29530537.md
@@ -1,6 +1,7 @@
 # Article L3120-2
 
-I.-Les véhicules qui effectuent les prestations mentionnées à l'article L. 3120-1 ne peuvent pas être loués à la place. 
+I.-Les véhicules qui effectuent les prestations mentionnées à l'article L. 3120-1 ne peuvent pas être loués à la place, sauf
+s'ils font l'objet d'une réservation préalable dans les conditions définies par un décret en Conseil d'Etat. 
 
 II.-A moins de justifier de l'autorisation de stationnement mentionnée à l'article L. 3121-1, le conducteur d'un véhicule
 mentionné au I du présent article ne peut : 
@@ -15,7 +16,7 @@ l'enceinte de celles-ci, au delà d'une durée, fixée par décret, précédant 
 qui a effectué une réservation préalable. 
 
 III.-Sont interdits aux personnes réalisant des prestations mentionnées à l'article L. 3120-1 et aux intermédiaires auxquels
-elles ont recours : 
+elles ont recours, notamment les centrales de réservation au sens de l'article L. 3142-1 : 
 
 1° Le fait d'informer un client, avant la réservation mentionnée au 1° du II du présent article, quel que soit le moyen
 utilisé, à la fois de la localisation et de la disponibilité d'un véhicule mentionné au I quand il est situé sur la voie
@@ -44,7 +45,8 @@ même 1°.
 
 	**Modifié par**:
 
-	  - Loi n°2015-990 du 6 août 2015 - art. 19
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 13 (V)
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 6
 
 	**Cite**:
 
