--- a/01. PARTIE LEGISLATIVE/Article L3121-11-1 - 29528684.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-11-1 - 29528684.md
@@ -5,9 +5,6 @@ géolocalisation des taxis. Ce registre, dénommé : “ registre de disponibili
 l'accès aux taxis par leurs clients en favorisant le développement de services innovants. Il est soumis à la loi n° 78-17 du
 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés. 
 
-Ce registre est géré par l'autorité administrative chargée de faciliter et de coordonner la mise à disposition des données
-publiques en vue de faciliter leur réutilisation. 
-
 Les autorités administratives compétentes pour délivrer les autorisations de stationnement prévues à l'article L. 3121-1 sont
 tenues de transmettre au gestionnaire du registre les informations relatives à l'autorisation de stationnement lors de toute
 délivrance ou lors de tout transfert, renouvellement ou retrait. 
@@ -18,21 +15,12 @@ national.
 
 Un décret en Conseil d'Etat précise les modalités d'application du présent article.
 
-**Nota:**
-
-Conformément à l'article 16 de la loi n° 2014-1104 du 1er octobre 2014, les présentes dispositions entrent en vigueur à une
-date fixée par voie réglementaire, qui ne peut être postérieure au 1er janvier 2015.
-
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Loi n°78-17 du 6 janvier 1978 (V)
-	  - Code des transports - art. L3121-1 (V)
-
-	**Créé par**:
-
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 1
+	  - Loi n°78-17 du 6 janvier 1978
+	  - Code des transports - art. L3121-1
 
 	**Cité par**:
 
@@ -46,3 +34,7 @@ date fixée par voie réglementaire, qui ne peut être postérieure au 1er janvi
 	  - Code des transports - art. R3121-30 (V)
 	  - Code des transports - art. R3121-33 (M)
 	  - Code des transports - art. R3121-5 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 13 (V)
