--- a/01. PARTIE LEGISLATIVE/Article L3121-11-2 - 29528682.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-11-2 - 29528682.md
@@ -1,24 +1,13 @@
 # Article L3121-11-2
 
-Un intermédiaire proposant à des clients de réserver un taxi ne peut interdire à l'exploitant ou au conducteur d'un taxi de
-prendre en charge un client en étant arrêté ou stationné ou en circulant sur la voie ouverte à la circulation publique, y
-compris quand la sollicitation du taxi par le client est intervenue par voie de communications électroniques ou par
-l'intermédiaire d'un tiers.
-
-Toute stipulation contractuelle contraire est réputée non écrite.
-
-Les dispositions du présent article sont d'ordre public.
-
-**Nota:**
-
-Conformément à l'article 16 de la loi n° 2014-1104 du 1er octobre 2014, les présentes dispositions sont applicables aux
-contrats conclus avant la publication de ladite loi.
+Pour toutes les courses réalisées par un taxi, quel que soit le montant  du prix, le passager peut payer dans le véhicule par
+carte bancaire.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 1
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 13 (V)
 
 	**Cité par**:
 
