--- a/01. PARTIE LEGISLATIVE/Article L3121-3 - 23083926.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-3 - 23083926.md
@@ -11,8 +11,9 @@ sauvegarde ou en cas de redressement judiciaire, selon le cas, à l'entreprise d
 en cas de liquidation judiciaire, au mandataire liquidateur. 
 
 En cas d'inaptitude définitive, constatée selon les modalités fixées par voie réglementaire, entraînant l'annulation du
-permis de conduire les véhicules de toutes les catégories, les titulaires d'autorisations de stationnement acquises à titre
-onéreux peuvent présenter un successeur sans condition de durée d'exploitation effective et continue. 
+permis de conduire les véhicules de toutes les catégories, les titulaires d'autorisations de stationnement délivrées avant la
+promulgation de la loi n° 2014-1104 du 1er octobre  2014 relative aux taxis et aux voitures de transport avec chauffeur
+peuvent présenter un successeur sans condition de durée d'exploitation effective et continue. 
 
 Les bénéficiaires de cette faculté ne peuvent conduire un taxi ou solliciter ou exploiter une ou plusieurs autorisations de
 stationnement qu'à l'issue d'une durée de cinq ans à compter de la date de présentation du successeur. 
@@ -29,13 +30,13 @@ pendant un délai d'un an à compter du décès.
 	**Cite**:
 
 	  - Loi n°2014-1104 du 1er octobre 2014
-	  - Code des transports - art. L3121-2 (V)
-
-	**Modifié par**:
-
-	  - Loi n°2015-990 du 6 août 2015 - art. 19
+	  - Code des transports - art. L3121-2
 
 	**Cité par**:
 
 	  - Arrêté du 19 janvier 2016 (V)
-	  - Code des transports - art. L3121-10 (M)
+	  - Code des transports - art. L3121-10 (Ab)
+
+	**Modifié par**:
+
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 12
