--- a/01. PARTIE LEGISLATIVE/Article L3122-1 - 23083898.md
+++ b/01. PARTIE LEGISLATIVE/Article L3122-1 - 23083898.md
@@ -1,18 +1,9 @@
 # Article L3122-1
 
-Le présent chapitre s'applique aux entreprises qui mettent à la disposition de leur clientèle une ou plusieurs voitures de
-transport avec chauffeur, dans des conditions fixées à l'avance entre les parties. Ces entreprises sont soit des exploitants
-de voitures de transport avec chauffeur, soit des intermédiaires qui mettent en relation des exploitants et des clients. 
+Le présent chapitre s'applique aux exploitants qui mettent à la disposition de leur clientèle une ou plusieurs voitures de
+transport avec chauffeur, dans des conditions fixées à l'avance entre les parties. 
 
 Les modalités d'application du présent chapitre sont définies par décret en Conseil d'Etat.
-
-**Nota:**
-
-Conformément au 16 VI de la loi n° 2014-1104 du 1er octobre 2014, les autorisations d'exploiter des voitures de petite remise
-régulièrement exploitées au 2 octobre 2014 demeurent, jusqu'à leur terme, régies par le chapitre II et la section 2 du
-chapitre IV du titre II du livre Ier de la troisième partie du code des transports et par le 26° de l'article 9 de
-l'ordonnance n° 2010-1307 du 28 octobre 2010 relative à la partie législative du code des transports, dans leur rédaction
-antérieure à la présente loi.
 
 **Liens relatifs à cet article**
 
@@ -22,13 +13,13 @@ antérieure à la présente loi.
 
 	**Modifié par**:
 
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 9
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 13 (V)
 
 	**Cité par**:
 
 	  - Arrêté du 2 mars 2017 - art. 34
 	  - Code des transports - art. L3122-3 (V)
-	  - Code des transports - art. L3122-4 (M)
+	  - Code des transports - art. L3122-4 (V)
 	  - Code des transports - art. L3122-4-1 (V)
 	  - Code des transports - art. L3122-5 (Ab)
 	  - Code des transports - art. L3122-6 (Ab)
