--- a/01. PARTIE LEGISLATIVE/Article L3124-4 - 23083864.md
+++ b/01. PARTIE LEGISLATIVE/Article L3124-4 - 23083864.md
@@ -10,9 +10,7 @@ complémentaires suivantes :
 
 2° L'immobilisation, pour une durée d'un an au plus, du véhicule qui a servi à commettre l'infraction ; 
 
-3° La confiscation du véhicule qui a servi à commettre l'infraction. 
-
-III.-Est puni de 15 000 € d'amende le fait de contrevenir au premier alinéa de l'article L. 3121-11-2.
+3° La confiscation du véhicule qui a servi à commettre l'infraction.
 
 **Liens relatifs à cet article**
 
@@ -22,13 +20,11 @@ III.-Est puni de 15 000 € d'amende le fait de contrevenir au premier alinéa d
 
 	**Modifié par**:
 
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 1
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 12
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 13 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L3121-1 (V)
-	  - Code des transports - art. L3121-11-2 (V)
+	  - Code des transports - art. L3121-1
 
 	**Cité par**:
 
