--- a/01. PARTIE LEGISLATIVE/Article L3124-7 - 23083852.md
+++ b/01. PARTIE LEGISLATIVE/Article L3124-7 - 23083852.md
@@ -1,6 +1,6 @@
 # Article L3124-7
 
-I.-Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait de contrevenir aux articles L. 3122-3 et L. 3122-5. 
+I.-Est puni d'un an d'emprisonnement et de 15 000 € d'amende le fait de contrevenir à l'article L. 3122-3.
 
 II.-Les personnes physiques reconnues coupables de l'infraction prévue au I encourent également les peines complémentaires
 suivantes : 
@@ -15,28 +15,19 @@ III.-Les personnes morales déclarées responsables pénalement, dans les condit
 l'infraction prévue au I du présent article encourent, outre l'amende suivant les modalités prévues à l'article 131-38 du
 même code, les peines prévues aux 8° et 9° de l'article 131-39 dudit code.
 
-**Nota:**
-
-Conformément à l'article 16 VI de la loi n° 2014-1104 du 1er octobre 2014, les autorisations d'exploiter des voitures de
-petite remise régulièrement exploitées à la date de publication de ladite loi, demeurent, jusqu'à leur terme, régies par le
-chapitre II et la section 2 du chapitre IV du titre II du livre Ier de la troisième partie du présent code et par le 26° de
-l'article 9 de l'ordonnance n° 2010-1307 du 28 octobre 2010 relative à la partie législative du code des transports, dans
-leur rédaction antérieure à la loi susmentionnée.
-
 **Liens relatifs à cet article**
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Modifié par**:
 
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 11
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 13 (V)
+
+	**Liens**:
+
+	  - DEPLACE: Loi n°2016-1920 du 29 décembre 2016 - art. 9 (V)
 
 	**Cite**:
 
 	  - Code pénal - art. 121-2
 	  - Code pénal - art. 131-38
 	  - Code pénal - art. 131-39
-	  - Code des transports - art. L3122-3
-	  - Code des transports - art. L3122-5 (Ab)
+	  - Code des transports - art. L3122-3 (V)
