--- a/01. PARTIE LEGISLATIVE/Article L3120-4 - 29530541.md
+++ b/01. PARTIE LEGISLATIVE/Article L3120-4 - 29530541.md
@@ -1,18 +1,17 @@
 # Article L3120-4
 
-Les personnes qui fournissent des prestations mentionnées à l'article L. 3120-1 et celles qui les mettent en relation avec
-des clients, directement ou indirectement, doivent pouvoir justifier à tout moment de l'existence d'un contrat d'assurance
-couvrant leur responsabilité civile professionnelle.
+Les personnes qui fournissent des prestations mentionnées à l'article L. 3120-1  sont en mesure de  justifier à tout moment
+de l'existence d'un contrat d'assurance couvrant leur responsabilité civile professionnelle.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-1104 du 1er octobre 2014 - art. 10
+	  - Loi n°2016-1920 du 29 décembre 2016 - art. 13 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L3120-1 (V)
+	  - Code des transports - art. L3120-1
 
 	**Cité par**:
 
