--- a/01. PARTIE LEGISLATIVE/Article L1261-18 - 31944963.md
+++ b/01. PARTIE LEGISLATIVE/Article L1261-18 - 31944963.md
@@ -1,18 +1,12 @@
 # Article L1261-18
 
-L'Autorité de régulation des activités ferroviaires et routières dispose de services placés sous l'autorité de son
-président. 
-
-Elle peut employer des magistrats et des fonctionnaires et recruter des agents contractuels. 
-
-Dans les conditions et limites fixées par le collège, le secrétaire général, nommé par le président, recrute les agents et
-peut conclure des contrats, conventions et marchés. Il a qualité pour agir en justice pour les affaires relevant du
-fonctionnement de l'autorité. 
+Dans les conditions et limites fixées par le collège, le secrétaire général recrute les agents et peut conclure des contrats,
+conventions et marchés. Il a qualité pour agir en justice pour les affaires relevant du fonctionnement de l'autorité. 
 
 Il peut déléguer ses pouvoirs à tout agent de l'autorité dans des matières et des limites déterminées par le collège.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 1
+	  - Loi n°2017-55 du 20 janvier 2017 - art. 29
