--- a/01. PARTIE LEGISLATIVE/Article L1261-3 - 31944703.md
+++ b/01. PARTIE LEGISLATIVE/Article L1261-3 - 31944703.md
@@ -1,7 +1,7 @@
 # Article L1261-3
 
-Les membres et les agents de l'Autorité de régulation des activités ferroviaires et routières exercent leurs fonctions en
-toute impartialité, sans recevoir d'instruction du Gouvernement ni d'aucune institution, personne, entreprise ou organisme. 
+Les agents de l'Autorité de régulation des activités ferroviaires et routières exercent leurs fonctions en toute
+impartialité, sans recevoir d'instruction du Gouvernement ni d'aucune institution, personne, entreprise ou organisme. 
 
 Ils sont tenus au secret professionnel pour les faits, actes et renseignements dont ils ont pu avoir connaissance en raison
 de leurs fonctions. 
@@ -17,10 +17,10 @@ soient astreints aux mêmes obligations de secret professionnel que celles défi
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 1
+	  - Loi n°2017-55 du 20 janvier 2017 - art. 29
 
 	**Cité par**:
 
-	  - Code des transports - art. L1261-7 (M)
+	  - Code des transports - art. L1261-7 (V)
