--- a/01. PARTIE LEGISLATIVE/Article L1261-6 - 31944850.md
+++ b/01. PARTIE LEGISLATIVE/Article L1261-6 - 31944850.md
@@ -4,12 +4,10 @@ Les membres autres que le président et les vice-présidents comprennent un nomb
 renouvellement des vice-présidents, le membre succédant à une femme est un homme et celui succédant à un homme est une
 femme. 
 
-En cas de vacance d'un siège de membre du collège, il est procédé à son remplacement par une personne de même sexe pour la
-durée du mandat restant à courir. Sous réserve de l'alinéa précédent, un mandat exercé pendant moins de deux ans n'est pas
-pris en compte pour l'application de la règle de non-renouvellement.
+En cas de vacance d'un siège de membre du collège, il est procédé à son remplacement par une personne de même sexe.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 1
+	  - Loi n°2017-55 du 20 janvier 2017 - art. 29
