--- a/01. PARTIE LEGISLATIVE/Article L1264-7 - 31945608.md
+++ b/01. PARTIE LEGISLATIVE/Article L1264-7 - 31945608.md
@@ -9,7 +9,7 @@ ferroviaires et routières en application des sections 2 et 3 du chapitre III du
 de celles applicables aux personnes mentionnées au 1° de cet article, ou à l'obligation de donner accès à sa comptabilité
 prévue au même article ; 
 
-3° Le manquement aux obligations de communication d'informations prévues en application des articles L. 2131-7, L. 3111-24,
+3° Le manquement aux obligations de communication d'informations prévues en application des articles L. 2132-7, L. 3111-24,
 L. 3114-11 du présent code et de l'article L. 122-31 du code de la voirie routière ; 
 
 4° Le manquement d'un gestionnaire d'infrastructure, d'un exploitant d'installation de service, de la SNCF, d'une entreprise
@@ -29,24 +29,22 @@ de la voirie routière.
 
 **Nota:**
 
-Au lieu de " L. 2131-7 " , il convient de lire " L. 2132-7 ". 
-
 Au lieu de " L. 2131-5 " , il convient de lire " L. 2132-5 ".
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2016-1691 du 9 décembre 2016 - art. 41
+	  - Loi n°2017-55 du 20 janvier 2017 - art. 29
 
 	**Cite**:
 
-	  - Code de la voirie routière - art. L122-31
+	  - Code de la voirie routière - art. L122-31 (V)
 	  - Code de la voirie routière - art. L122-33 (V)
 	  - Code des transports - art. L1264-2
 	  - Code des transports - art. L2102-1
 	  - Code des transports - art. L2132-5
-	  - Code des transports - art. L2132-7
+	  - Code des transports - art. L2132-7 (V)
 	  - Code des transports - art. L2133-3
 	  - Code des transports - art. L3111-24
 	  - Code des transports - art. L3114-1
