--- a/01. PARTIE LEGISLATIVE/Article L6361-1 - 23078011.md
+++ b/01. PARTIE LEGISLATIVE/Article L6361-1 - 23078011.md
@@ -6,8 +6,7 @@ matière d'environnement, de santé humaine ou de transport aérien.
 
 Elle comprend :
 
-1° Un président nommé par décret pris en conseil des ministres et qui exerce ses fonctions dans les conditions définies par
-voie réglementaire ;
+1° Un président nommé par décret du Président de la République ;
 
 2° Deux membres respectivement désignés par le président de l'Assemblée nationale et par le président du Sénat ;
 
@@ -27,24 +26,17 @@ f) D'aéronautique, sur proposition du ministre chargé de l'aviation civile ;
 
 g) De navigation aérienne, sur proposition du ministre chargé de l'aviation civile.
 
-Le mandat des membres de l'Autorité est de six ans. Il n'est pas révocable.
+Le mandat des membres de l'Autorité est de six ans. 
 
 Pour assurer un renouvellement par moitié de l'autorité, cinq membres sont nommés tous les trois ans.
 
 Les membres mentionnés au 1° et au 3° comprennent un nombre égal de femmes et d'hommes. Pour le renouvellement des membres
-mentionnés au 2°, le membre succédant à une femme est un homme et celui succédant à un homme est une femme.  
+mentionnés au 2°, le membre succédant à une femme est un homme et celui succédant à un homme est une femme. 
 
-Sauf démission, il ne peut être mis fin aux fonctions de membre qu'en cas d'empêchement constaté par l'autorité dans les
-conditions qu'elle définit.
+Si, en cours de mandat, le président ou un membre de l'autorité cesse d'exercer ses fonctions son successeur est de même
+sexe.
 
-Tout membre exerçant une activité ou détenant un mandat, un emploi ou des intérêts incompatibles avec sa fonction est déclaré
-démissionnaire d'office, après consultation de l'autorité, selon les formes requises pour sa nomination.
-
-Si, en cours de mandat, le président ou un membre de l'autorité cesse d'exercer ses fonctions, le mandat de son successeur
-est limité à la période restant à courir. Ce successeur du même sexe  est nommé dans un délai de deux mois.
-
-Le mandat des membres de l'autorité n'est pas renouvelable. Toutefois, sous réserve du quinzième alinéa, cette règle n'est
-pas applicable aux membres dont le mandat, en application de l'alinéa ci-dessus, n'a pas excédé deux ans.
+Le mandat des membres de l'autorité n'est pas renouvelable.
 
 Les fonctions de président sont rémunérées et les fonctions de membre de l'autorité sont indemnisées dans des conditions
 fixées par décret.
@@ -53,7 +45,7 @@ fixées par décret.
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-948 du 31 juillet 2015 - art. 2
+	  - Loi n°2017-55 du 20 janvier 2017 - art. 26
 
 	**Cité par**:
 
