--- a/01. PARTIE LEGISLATIVE/Article L1261-1 - 31944699.md
+++ b/01. PARTIE LEGISLATIVE/Article L1261-1 - 31944699.md
@@ -1,13 +1,13 @@
 # Article L1261-1
 
-L'Autorité de régulation des activités ferroviaires et routières est une autorité publique indépendante, dotée de la
-personnalité morale. Elle comprend un collège et une commission des sanctions. 
+L'Autorité de régulation des activités ferroviaires et routières est une autorité publique indépendante. Elle comprend un
+collège et une commission des sanctions. 
 
 Hormis les décisions attribuées expressément à la commission des sanctions, les attributions confiées à l'autorité ou à son
 président sont exercées par son collège ou par son président.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 1
+	  - Loi n°2017-55 du 20 janvier 2017 - art. 29
