--- a/01. PARTIE LEGISLATIVE/Article L1261-10 - 31944893.md
+++ b/01. PARTIE LEGISLATIVE/Article L1261-10 - 31944893.md
@@ -1,11 +1,11 @@
 # Article L1261-10
 
 En cas de vacance de la présidence de l'Autorité de régulation des activités ferroviaires et routières pour quelque cause que
-ce soit ou en cas d'empêchement constaté par le collège, les fonctions du président sont provisoirement exercées par le vice-
-président le plus anciennement désigné.
+ce soit ou en cas d'empêchement, les fonctions du président sont provisoirement exercées par le vice-président le plus
+anciennement désigné.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 1
+	  - Loi n°2017-55 du 20 janvier 2017 - art. 29
