--- a/01. PARTIE LEGISLATIVE/Article L1261-16 - 31944949.md
+++ b/01. PARTIE LEGISLATIVE/Article L1261-16 - 31944949.md
@@ -10,12 +10,9 @@ La commission des sanctions de l'Autorité de régulation des activités ferrovi
 
 Le président de la commission des sanctions est nommé par décret parmi les membres de la commission. 
 
-Les fonctions de membre de la commission des sanctions ne sont pas rémunérées. Elles sont incompatibles avec celles de membre
-du collège de l'autorité. 
+Les fonctions de membre de la commission des sanctions ne sont pas rémunérées. 
 
-La durée du mandat des membres de la commission est de six ans non renouvelable. Elle est décomptée à partir de la date de la
-première réunion de la commission. A l'expiration de la durée de six ans, les membres restent en fonctions jusqu'à la
-première réunion de la commission des sanctions dans sa nouvelle composition. 
+La durée du mandat des membres de la commission est de six ans non renouvelable. 
 
 L'écart entre le nombre de femmes et le nombre d'hommes parmi les membres de la commission des sanctions ne peut être
 supérieur à un. Lors de chaque renouvellement, le membre succédant à une femme est un homme et celui succédant à un homme est
@@ -26,6 +23,6 @@ de même sexe pour la durée du mandat restant à courir.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 1
+	  - Loi n°2017-55 du 20 janvier 2017 - art. 29
