--- a/01. PARTIE LEGISLATIVE/Article L6361-11 - 23077981.md
+++ b/01. PARTIE LEGISLATIVE/Article L6361-11 - 23077981.md
@@ -1,22 +1,12 @@
 # Article L6361-11
 
-L'Autorité de contrôle des nuisances aéroportuaires dispose de services qui sont placés sous l'autorité de son président.
-
-Celui-ci nomme le rapporteur permanent et son suppléant.
-
-Pour l'exécution de ses missions, l'autorité établit son règlement intérieur qui est publié au Journal officiel.
-
-L'autorité peut employer des fonctionnaires en position de détachement dans les mêmes conditions que le ministère chargé de
-l'aviation civile. Elle peut recruter des agents contractuels.
-
-Les personnels des services de l'autorité sont tenus au secret professionnel pour les faits, actes et renseignements dont ils
-ont pu avoir connaissance en raison de leurs fonctions.
+Le président nomme le rapporteur permanent et son suppléant.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code de l'aviation civile - art. L227-9 (Ab)
+	  - Loi n°2017-55 du 20 janvier 2017 - art. 26
 
 	**Codifié par**:
 
