--- a/01. PARTIE LEGISLATIVE/Article L1213-3-2 - 28528800.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-3-2 - 28528800.md
@@ -6,9 +6,9 @@ sens du chapitre Ier du titre Ier du livre Ier de la présente partie, notamment
 transports collectifs, les usages partagés des véhicules terrestres à moteur et les modes de déplacement terrestres non
 motorisés. 
 
-Le plan de mobilité rurale est élaboré à l'initiative d'un établissement public mentionné aux a à c de l'article L. 143-16 du
-code de l'urbanisme ou, à défaut, par un pôle d'équilibre territorial et rural. Le plan couvre tout ou partie du territoire
-de l'établissement public qui l'élabore. 
+Le plan de mobilité rurale est élaboré à l'initiative d'un établissement public mentionné aux 1° à 3° de l'article L. 143-16
+du code de l'urbanisme ou, à défaut, par un pôle d'équilibre territorial et rural. Le plan couvre tout ou partie du
+territoire de l'établissement public qui l'élabore. 
 
 Le plan de mobilité rurale prend en compte les plans de mobilité des entreprises, des personnes publiques et des
 établissements scolaires applicables sur le territoire qu'il couvre. 
@@ -29,14 +29,9 @@ quatrième et cinquième alinéas du présent article, le plan est arrêté par 
 
 	**Modifié par**:
 
-	  - Ordonnance n°2016-1028 du 27 juillet 2016 - art. 2
+	  - Loi n°2017-86 du 27 janvier 2017 - art. 117 (V)
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L143-16
-	  - Code de l'environnement - art. L120-1
-	  - Code des transports - art. L1231-10
-
-	**Anciens textes**:
-
-	  - Code des transports - art. L1213-3-4 (T)
+	  - Code de l'urbanisme - art. L143-16 (V)
+	  - Code de l'environnement - art. L120-1 (V)
