--- a/02. PARTIE REGLEMENTAIRE/Article R4511-8 - 27234105.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4511-8 - 27234105.md
@@ -1,7 +1,7 @@
 # Article R4511-8
 
 Le personnel navigant a droit à un repos hebdomadaire d'une durée minimale de vingt-quatre heures consécutives, qui peut être
-accordé un jour quelconque de la semaine.
+accordé un jour quelconque de la semaine, qu'il passe en un lieu librement choisi.
 
 **Liens relatifs à cet article**
 
@@ -9,13 +9,9 @@ accordé un jour quelconque de la semaine.
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
-
-	**Anciens textes**:
-
-	  - Code du travail - art. R221-19 (Ab)
+	  - Décret n°2017-200 du 17 février 2017 - art. 1
 
 	**Cité par**:
 
