--- a/02. PARTIE REGLEMENTAIRE/Article R4511-9 - 27234107.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4511-9 - 27234107.md
@@ -6,9 +6,11 @@ supérieur à trois jours.
 
 Toutefois, des modalités différentes de celles exposées à l'alinéa ci-dessus peuvent être définies par accord d'entreprise ou
 d'établissement. Ces accords ne peuvent avoir pour effet de porter le crédit de repos hebdomadaires différés au-delà de six
-jours. 
+jours ni le nombre de jours de travail consécutifs au-delà de trente et un jours.
 
-Les repos hebdomadaires différés doivent pouvoir être pris à terre.
+La date au-delà de laquelle le repos hebdomadaire différé ne peut être reporté en application des deux premiers alinéas du
+présent article, est fixée au 1er mars de chaque année. Toutefois, le repos hebdomadaire différé est pris avant la fin du
+contrat de travail lorsque celui-ci est d'une durée inférieure à 1 an.
 
 **Liens relatifs à cet article**
 
@@ -16,17 +18,13 @@ Les repos hebdomadaires différés doivent pouvoir être pris à terre.
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
-
-	**Anciens textes**:
-
-	  - Code du travail - art. R221-20 (Ab)
+	  - Décret n°2017-200 du 17 février 2017 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. R4511-8 (V)
+	  - Code des transports - art. R4511-8
 
 	**Cité par**:
 
