--- a/01. PARTIE LEGISLATIVE/Article L1803-1 - 23084936.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-1 - 23084936.md
@@ -6,13 +6,14 @@ l'ensemble des personnes qui y sont régulièrement établies, une politique nat
 Cette politique repose sur les principes d'égalité des droits, de solidarité nationale et d'unité de la République. Elle tend
 à rapprocher les conditions d'accès de la population aux services publics de transport, de formation, de santé et de
 communication de celles de la métropole, en tenant compte de la situation géographique, économique et sociale particulière de
-chaque collectivité territoriale d'outre-mer.
+chaque collectivité territoriale d'outre-mer. Peuvent en bénéficier, dans des conditions prévues par la loi, des personnes
+résidant en France métropolitaine.
 
 **Liens relatifs à cet article**
 
-	**Liens**:
+	**Modifié par**:
 
-	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
+	  - Loi n°2017-256 du 28 février 2017 - art. 47
 
 	**Codifié par**:
 
