--- a/01. PARTIE LEGISLATIVE/Article L1803-2 - 23084934.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-2 - 23084934.md
@@ -2,15 +2,24 @@
 
 En faveur des personnes ayant leur résidence habituelle en Guadeloupe, en Guyane, à la Martinique, à Mayotte, en Nouvelle-
 Calédonie, en Polynésie française, à La Réunion, à Saint-Barthélemy, à Saint-Martin, à Saint-Pierre-et-Miquelon et à Wallis-
-et-Futuna, le fonds de continuité territoriale finance des aides à la continuité territoriale ainsi que des aides destinées
-aux étudiants de l'enseignement supérieur et aux élèves du second cycle de l'enseignement secondaire. Il finance également
-des aides liées aux déplacements justifiés par la formation professionnelle en mobilité.
+et-Futuna, le fonds de continuité territoriale finance des aides à la continuité territoriale, le passeport pour la mobilité
+en stage professionnel mentionné à l'article L. 1803-5-1  ainsi que des aides destinées aux étudiants de l'enseignement
+supérieur et aux élèves du second cycle de l'enseignement secondaire. Il finance également des aides liées aux déplacements
+justifiés par la formation professionnelle en mobilité.
+
+Le fonds de continuité territoriale peut financer, dans des conditions prévues par la loi, des aides en faveur de personnes
+résidant en France métropolitaine.
+
+Le fonds de continuité territoriale peut financer des aides et des mesures destinées à faciliter le retour des résidents
+ultramarins dans leur collectivité d'origine dans les cinq ans suivant l'accomplissement d'une période de formation en
+mobilité.
 
 **Liens relatifs à cet article**
 
-	**Liens**:
+	**Modifié par**:
 
-	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
+	  - Loi n°2017-256 du 28 février 2017 - art. 47
+	  - Loi n°2017-256 du 28 février 2017 - art. 49
 
 	**Cité par**:
 
@@ -24,8 +33,7 @@ des aides liées aux déplacements justifiés par la formation professionnelle e
 	  - Code des transports - art. L1803-4 (V)
 	  - Code des transports - art. L1803-5 (V)
 	  - Code des transports - art. L1803-6 (V)
-	  - Code des transports - art. L1803-7 (M)
-	  - Code des transports - art. L1803-8 (Ab)
+	  - Code des transports - art. L1803-7 (V)
 	  - Code des transports - art. L1803-9 (V)
 
 	**Codifié par**:
