--- a/01. PARTIE LEGISLATIVE/Article L1803-4 - 31323746.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-4 - 31323746.md
@@ -2,7 +2,13 @@
 
 L'aide destinée à financer une partie des titres de transport des personnes résidant dans l'une des collectivités mentionnées
 à l'article L. 1803-2 entre leur collectivité de résidence et le territoire métropolitain est appelée " aide à la continuité
-territoriale ".
+territoriale ". 
+
+Elle finance aussi, sous conditions de ressources, une partie des titres de transport des résidents habituels régulièrement
+établis en France métropolitaine lorsque la demande d'aide à la continuité territoriale est justifiée par un déplacement pour
+se rendre aux obsèques d'un parent au premier degré, au sens de l'article 743 du code civil, de leur conjoint ou de leur
+partenaire lié par un pacte civil de solidarité, dans l'une des collectivités mentionnées à l'article L. 1803-2 du présent
+code. 
 
 L'aide à la continuité territoriale peut aussi financer une partie des titres de transport entre les collectivités
 mentionnées à l'article L. 1803-2 à l'intérieur d'une même zone géographique ou à l'intérieur d'une même collectivité, en
@@ -21,14 +27,14 @@ alinéa.
 	  - Code des transports - art. D1803-13 (V)
 	  - Code des transports - art. D1803-14 (V)
 	  - Code des transports - art. D1803-3 (V)
-	  - Code des transports - art. L1803-8 (Ab)
 
-	**Liens**:
+	**Modifié par**:
 
-	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
+	  - Loi n°2017-256 du 28 février 2017 - art. 47
 
 	**Cite**:
 
+	  - Code civil - art. 743 (V)
 	  - Code des transports - art. L1803-2
 
 	**Codifié par**:
