--- a/01. PARTIE LEGISLATIVE/Article L2241-1 - 23084158.md
+++ b/01. PARTIE LEGISLATIVE/Article L2241-1 - 23084158.md
@@ -13,7 +13,8 @@ transports ;
 
 4° Les agents assermentés de l'exploitant du service de transport ; 
 
-5° Les agents assermentés missionnés du service interne de sécurité de la SNCF mentionné à l'article L. 2251-1-1 ;
+5° Les agents assermentés missionnés des services internes de sécurité de la SNCF et de la Régie autonome des transports
+parisiens ;
 
 6° Les agents de police municipale. 
 
@@ -59,8 +60,7 @@ circulation, l'arrêt et le stationnement des véhicules dans les cours des gare
 
 	**Modifié par**:
 
-	  - Loi n°2016-339 du 22 mars 2016 - art. 20
-	  - Loi n°2016-339 du 22 mars 2016 - art. 6
+	  - Loi n°2017-258 du 28 février 2017 - art. 34
 
 	**Cite**:
 
