--- a/01. PARTIE LEGISLATIVE/Article L1803-15 - 31316057.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-15 - 31316057.md
@@ -1,13 +1,18 @@
 # Article L1803-15
 
 Le représentant de l'Etat dans la collectivité territoriale d'outre-mer dans laquelle l'Agence de l'outre-mer pour la
-mobilité possède une délégation territoriale en est le délégué territorial.
+mobilité possède une délégation territoriale en est le délégué territorial. 
+
+A Saint-Pierre-et-Miquelon, à Saint-Barthélemy, à Saint-Martin, à Wallis-et-Futuna, en Polynésie française et en Nouvelle-
+Calédonie, le représentant de l'Etat représente l'Agence de l'outre-mer pour la mobilité auprès de la collectivité pour la
+mise en œuvre des programmes de formation ou d'insertion professionnelle en mobilité élaborés en partenariat avec cette
+collectivité et détermine les modalités d'identification des bénéficiaires de ces programmes.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2015-1268 du 14 octobre 2015 - art. 4
+	  - Loi n°2017-256 du 28 février 2017 - art. 50
 
 	**Cité par**:
 
