--- a/01. PARTIE LEGISLATIVE/Article L1803-7 - 23084924.md
+++ b/01. PARTIE LEGISLATIVE/Article L1803-7 - 23084924.md
@@ -1,17 +1,17 @@
 # Article L1803-7
 
-Les conditions d'application des articles L. 1803-2 à L. 1803-6 et les limites apportées au cumul des aides au cours d'une
-même année sont fixées par voie réglementaire.
+Les conditions d'application des articles L. 1803-2 à L. 1803-6, les critères d'éligibilité aux aides prévues à ces mêmes
+articles  et les limites apportées au cumul des aides au cours d'une même année sont fixés par voie réglementaire.
 
 **Liens relatifs à cet article**
 
-	**Liens**:
+	**Modifié par**:
 
-	  - DEPLACE: Loi n°2015-1268 du 14 octobre 2015 - art. 4
+	  - Loi n°2017-256 du 28 février 2017 - art. 47
 
 	**Cite**:
 
-	  - Code des transports - art. L1803-2
+	  - Code des transports - art. L1803-2 (V)
 
 	**Codifié par**:
 
