--- a/01. PARTIE LEGISLATIVE/Article L5442-1 - 29178409.md
+++ b/01. PARTIE LEGISLATIVE/Article L5442-1 - 29178409.md
@@ -1,7 +1,7 @@
 # Article L5442-1
 
-I.-Sans préjudice de l'application d'accords internationaux, l'activité mentionnée à l'article L. 5441-1 est exercée au-delà
-de la mer territoriale des Etats, dans des zones fixées par arrêté du Premier ministre lorsque les menaces encourues
+I. - Sans préjudice de l'application d'accords internationaux, l'activité mentionnée à l'article L. 5441-1 est exercée au-
+delà de la mer territoriale des Etats, dans des zones fixées par arrêté du Premier ministre lorsque les menaces encourues
 constituent des menaces d'actes définis aux articles 224-6 à 224-8 du code pénal. Un comité réunissant notamment des
 représentants des armateurs, du ministre de la défense, du ministre chargé des transports et du ministre des affaires
 étrangères peut, de sa propre initiative, recommander au Premier ministre de redéfinir ces zones au regard de l'évolution des
@@ -9,15 +9,17 @@ menaces identifiées.
 
 Ce comité se réunit dans les quinze jours suivant la demande d'un de ses membres. 
 
-Un décret fixe les types de navires non éligibles ainsi que les circonstances dérogatoires dans lesquelles ceux-ci peuvent
-embarquer des agents de protection. 
+II. - Sans préjudice de l'application d'accords internationaux, l'activité mentionnée à l'article L. 5441-1 est exercée au-
+delà de la mer territoriale des Etats lorsque les menaces encourues constituent des menaces d'actes de terrorisme définis au
+titre II du livre IV du code pénal. 
 
-II.-Sans préjudice de l'application d'accords internationaux, l'activité mentionnée à l'article L. 5441-1 est exercée au-delà
-de la mer territoriale des Etats lorsque les menaces encourues constituent des menaces d'actes de terrorisme définis au titre
-II du livre IV du code pénal. 
+III. - Lorsqu'il existe un risque exceptionnel d'atteinte à la vie des personnes embarquées sur le navire, l'activité
+mentionnée à l'article L. 5441-1 du présent code peut être exercée dans les eaux territoriales et les eaux intérieures
+maritimes françaises, après autorisation du préfet maritime ou du délégué du Gouvernement pour l'action de l'Etat en mer.
+Cette autorisation est délivrée sur demande de l'armateur, pour un trajet défini ou une ligne régulière définie. 
 
-Un décret fixe les types de navires non éligibles ainsi que les circonstances dérogatoires dans lesquelles ceux-ci peuvent
-embarquer des agents de protection.
+IV. - Un décret fixe les types de navires non éligibles ainsi que les circonstances dérogatoires dans lesquelles ceux-ci
+peuvent embarquer des agents de protection.
 
 **Liens relatifs à cet article**
 
@@ -40,9 +42,9 @@ embarquer des agents de protection.
 
 	**Modifié par**:
 
-	  - Loi n°2016-816 du 20 juin 2016 - art. 61
+	  - Loi n°2017-258 du 28 février 2017 - art. 11
 
 	**Cite**:
 
-	  - Code pénal - art. 224-6 (V)
+	  - Code pénal - art. 224-6
 	  - Code des transports - art. L5441-1
