--- a/01. PARTIE LEGISLATIVE/Article L5764-1 - 23078634.md
+++ b/01. PARTIE LEGISLATIVE/Article L5764-1 - 23078634.md
@@ -1,7 +1,10 @@
 # Article L5764-1
 
 Les dispositions du livre IV, à l'exception de celles de l'article L. 5421-13 et du chapitre V du titre II et du chapitre Ier
-du titre III sont applicables en Nouvelle-Calédonie.
+du titre III sont applicables en Nouvelle-Calédonie. 
+
+L'article L. 5442-1 est applicable dans sa rédaction résultant de la loi n° 2017-258 du 28 février 2017 relative à la
+sécurité publique.
 
 **Liens relatifs à cet article**
 
@@ -9,10 +12,12 @@ du titre III sont applicables en Nouvelle-Calédonie.
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
-	**Modifié par**:
-
-	  - Loi n°2014-344 du 17 mars 2014 - art. 116
-
 	**Cite**:
 
+	  - Loi n°2017-258 du 28 février 2017 (V)
 	  - Code des transports - art. L5421-13
+	  - Code des transports - art. L5442-1 (V)
+
+	**Modifié par**:
+
+	  - Loi n°2017-258 du 28 février 2017 - art. 40
