--- a/01. PARTIE LEGISLATIVE/Article L5774-1 - 23078603.md
+++ b/01. PARTIE LEGISLATIVE/Article L5774-1 - 23078603.md
@@ -1,6 +1,9 @@
 # Article L5774-1
 
-Le chapitre IV du titre III et le titre IV du livre IV sont applicables en Polynésie française.
+Le chapitre IV du titre III et le titre IV du livre IV sont applicables en Polynésie française. 
+
+L'article L. 5442-1 est applicable dans sa rédaction résultant de la loi n° 2017-258 du 28 février 2017 relative à la
+sécurité publique.
 
 **Liens relatifs à cet article**
 
@@ -8,6 +11,11 @@ Le chapitre IV du titre III et le titre IV du livre IV sont applicables en Polyn
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
+	**Cite**:
+
+	  - Loi n°2017-258 du 28 février 2017 (V)
+	  - Code des transports - art. L5442-1 (V)
+
 	**Modifié par**:
 
-	  - Loi n°2014-742 du 1er juillet 2014 - art. 35
+	  - Loi n°2017-258 du 28 février 2017 - art. 40
