--- a/01. PARTIE LEGISLATIVE/Article L6332-2 - 23078104.md
+++ b/01. PARTIE LEGISLATIVE/Article L6332-2 - 23078104.md
@@ -1,13 +1,23 @@
 # Article L6332-2
 
-La police des aérodromes et des installations aéronautiques régis par les dispositions du présent chapitre est assurée, sous
-réserve des pouvoirs de l'autorité militaire à l'égard des aérodromes et installations dépendant de la défense nationale, par
-le représentant de l'Etat dans le département qui exerce, à cet effet, dans leur emprise, les pouvoirs impartis au maire aux
-articles L. 2212-2 et L. 2213-33 du code général des collectivités territoriales. 
+I. - La police des aérodromes et des installations aéronautiques régis par les dispositions du présent chapitre est assurée,
+sous réserve des pouvoirs de l'autorité militaire à l'égard des aérodromes et installations dépendant de la défense
+nationale, par le représentant de l'Etat dans le département qui exerce, à cet effet, dans leur emprise, les pouvoirs
+impartis au maire aux articles L. 2212-2 et L. 2213-33 du code général des collectivités territoriales. 
 
 Les modalités d'application du présent article, notamment les conditions dans lesquelles le représentant de l'Etat dans le
 département est chargé des pouvoirs mentionnés à ces articles lorsque l'emprise de l'aérodrome s'étend sur plusieurs
 départements sont fixées par décret en Conseil d'Etat.
+
+II. - Par dérogation au I du présent article, le préfet de police exerce, sur les emprises des aérodromes de Paris-Charles de
+Gaulle, du Bourget et de Paris-Orly, les pouvoirs mentionnés aux articles L. 2212-2 et L. 2213-33 du code général des
+collectivités territoriales.
+
+**Nota:**
+
+Conformémenent à l'article 33-III de la loi n° 2017-257 du 28 février 2017, la date d'entrée en vigueur, pour l'emprise de
+l'aérodrome de Paris-Orly, est fixée par décret, et au plus tard à l'issue d'un délai de trois ans à compter de la
+promulgation de ladite loi (28 février 2020).
 
 **Liens relatifs à cet article**
 
@@ -33,7 +43,7 @@ départements sont fixées par décret en Conseil d'Etat.
 
 	**Modifié par**:
 
-	  - Loi n°2014-58 du 27 janvier 2014 - art. 66
+	  - Loi n°2017-257 du 28 février 2017 - art. 33 (V)
 
 	**Cite**:
 
