--- a/02. PARTIE REGLEMENTAIRE/Article R5312-11 - 30030538.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5312-11 - 30030538.md
@@ -2,9 +2,9 @@
 
 Les membres du conseil de surveillance représentant les collectivités territoriales sont :
 
-1° Un membre du conseil régional de la région dans laquelle se trouve le siège du port, désigné par ce conseil ;
+1° Deux membres du conseil régional de la région dans laquelle se trouve le siège du port, désigné par ce conseil ;
 
-2° Un membre du conseil général du département dans lequel se trouve le siège du port, désigné par ce conseil ;
+2° Un membre du conseil départemental du département dans lequel se trouve le siège du port, désigné par ce conseil ;
 
 3° Deux représentants des communes et groupements de collectivités territoriales dont une partie du territoire est située
 dans la circonscription. Le décret instituant le grand port maritime détermine les deux communes ou groupements disposant
@@ -12,17 +12,9 @@ d'un représentant. Celui-ci est désigné parmi ses membres par l'organe délib
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R102-1,  paragraphe II (Ab)
+	  - Décret n°2017-423 du 28 mars 2017 - art. 1
 
 	**Cité par**:
 
