--- a/02. PARTIE REGLEMENTAIRE/Article R5312-12 - 30030540.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5312-12 - 30030540.md
@@ -1,12 +1,13 @@
 # Article R5312-12
 
 Les personnalités qualifiées mentionnées au 4° de l'article L. 5312-7 sont nommées par arrêté du ministre chargé des ports
-maritimes, après consultation du ministre chargé de l'économie. Elles sont choisies en raison de leur compétence dans les
-activités intéressant les ports, l'aménagement, l'environnement, la navigation maritime, les transports, l'économie régionale
-ou l'économie nationale. 
+maritimes, après consultation du ministre chargé de l'économie et après avis du président du conseil régional. A défaut de
+réponse dans le délai d'un mois à compter de la saisine de ce dernier, l'avis est réputé rendu. Ces personnalités qualifiées
+sont choisies en raison de leur compétence dans les activités intéressant les ports, l'aménagement, l'environnement, la
+navigation maritime, les transports, l'économie régionale ou l'économie nationale.
 
-Le décret en Conseil d'Etat instituant le grand port désigne la chambre consulaire qui dispose d'un représentant élu au
-conseil de surveillance. Le ministre chargé des ports maritimes invite cette chambre consulaire à proposer son représentant. 
+Le ministre chargé des ports maritimes invite la chambre de commerce et d'industrie de région à proposer son représentant,
+après avis du président du conseil régional.
 
 Le préfet de région publie au recueil des actes administratifs de la préfecture la liste nominative des membres du conseil de
 surveillance.
@@ -17,17 +18,13 @@ surveillance.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R102-1,  paragraphe III (Ab)
+	  - Décret n°2017-423 du 28 mars 2017 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L5312-7 (V)
+	  - Code des transports - art. L5312-7
 
 	**Cité par**:
 
