--- a/02. PARTIE REGLEMENTAIRE/Article R5112-4 - 33743737.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5112-4 - 33743737.md
@@ -7,33 +7,36 @@ la certification sociale des navires :
 1° Pour tous les navires d'une longueur de référence supérieure ou égale à 24 mètres effectuant des voyages internationaux,
 le certificat international de jaugeage des navires ;
 
-2° Pour les navires, d'une longueur hors tout supérieure ou égale à 15 mètres, à l'exception des navires de plaisance à usage
-personnel ou de formation, le certificat national de jaugeage en l'absence de certificat international de jaugeage .
+2° Pour les navires, d'une longueur de référence supérieure ou égale à 24 mètres, le certificat national de jaugeage en
+l'absence de certificat international de jaugeage ;
 
-3° Pour les navires de plaisance à usage personnel ou de formation d'une longueur de référence supérieure ou égale à 24
-mètres, le certificat national de jaugeage en l'absence de certificat international de jaugeage ;
+3° Pour les navires de pêche d'une longueur hors tout supérieure ou égale à 15 mètres, le certificat national de jaugeage en
+l'absence de certificat international de jaugeage.
 
 II. - Sont délivrés par le chef du centre de sécurité des navires compétent le certificat national de jaugeage pour tous les
-navires d'une longueur hors tout inférieure à 15 mètres, à l'exception des navires de plaisance à usage personnel ou de
-formation.
+navires de pêche d'une longueur hors tout inférieure à 15 mètres.
+
+III. - La jauge des navires à passagers, de charge, spéciaux, de plaisance à utilisation commerciale et de plaisance de
+formation, d'une longueur de référence inférieure à 24 mètres, ne fait pas l'objet de la délivrance d'un certificat mais
+d'une déclaration du propriétaire ayant valeur de certificat. Cette déclaration est remise au chef du centre de sécurité des
+navires compétent, selon des modalités définies par arrêté du ministre chargé de la mer.
+
+Les navires de plaisance à usage personnel dont la longueur de référence est inférieure à 24 mètres ne sont pas jaugés et ne
+font pas l'objet d'une déclaration de la part de leur propriétaire.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Décret n°84-810 du 30 août 1984 (V)
-
-	**Anciens textes**:
-
-	  - Décret n°84-810 du 30 août 1984 - art. 3-1, 1°, 2° et 3° du paragraphe II et paragraphe IM (V)
+	  - Décret n°84-810 du 30 août 1984
 
 	**Codifié par**:
 
 	  - Décret n°2016-1893 du 28 décembre 2016 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-1893 du 28 décembre 2016 - art.
+	  - Décret n°2017-422 du 28 mars 2017 - art. 12
 
 	**Cité par**:
 
