--- a/02. PARTIE REGLEMENTAIRE/Article R5312-35 - 30030588.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5312-35 - 30030588.md
@@ -1,8 +1,11 @@
 # Article R5312-35
 
 Les actes de nature réglementaire pris par le conseil de surveillance ou le directoire sont publiés par voie d'inscription
-dans un registre mis à la disposition du public au siège du grand port maritime et dont le sommaire est publié par voie
-électronique. L'inscription est attestée par le directoire.
+dans un registre mis à la disposition du public au siège du grand port maritime et par voie électronique. L'inscription est
+attestée par le directoire.
+
+Toute décision du conseil de surveillance sur l'objet de laquelle la commission des investissements a rendu un avis
+défavorable doit être motivée et intégralement publiée au recueil des actes administratifs du département.
 
 **Liens relatifs à cet article**
 
@@ -10,10 +13,6 @@ dans un registre mis à la disposition du public au siège du grand port maritim
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R102-23 (Ab)
+	  - Décret n°2017-423 du 28 mars 2017 - art. 1
