--- a/02. PARTIE REGLEMENTAIRE/Article R5312-36 - 30030592.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5312-36 - 30030592.md
@@ -1,24 +1,24 @@
 # Article R5312-36
 
-Le nombre de membres du conseil de développement mentionné à l'article L. 5312-11 est fixé par le décret instituant le port.
-Ce nombre est au moins de vingt et au plus de quarante. 
+Le nombre de membres du conseil de développement mentionné à l'article L. 5312-11 est au moins de vingt et au plus de
+quarante.
 
-Ce conseil est composé de quatre collèges : 
+Ce conseil est composé de quatre collèges :
 
-1° Le collège des représentants de la place portuaire, qui comprend 30 % des membres du conseil ; 
+1° Le collège des représentants de la place portuaire, qui comprend 30 % des membres du conseil ;
 
 2° Le collège des représentants des personnels des entreprises exerçant leurs activités sur le port, qui comprend 10 % des
 membres du conseil et est composé, au moins pour moitié, de représentants des salariés des entreprises de manutention
-portuaire ; 
+portuaire ;
 
 3° Le collège des représentants des collectivités territoriales ou de leurs groupements situés dans la circonscription du
-port, qui comprend 30 % des membres du conseil ; 
+port, qui comprend 30 % des membres du conseil ;
 
 4° Le collège des personnalités qualifiées intéressées au développement du port, qui comprend 30 % des membres du conseil. Ce
 collège est composé, au moins pour un quart, de représentants d'associations agréées de défense de l'environnement et, au
-moins pour un quart, de représentants des entreprises et gestionnaires d'infrastructures de transport terrestre. 
+moins pour un quart, de représentants des entreprises et gestionnaires d'infrastructures de transport terrestre.
 
-Le conseil de développement élit son président parmi ses membres. 
+Le conseil de développement élit son président parmi ses membres.
 
 La durée du mandat des membres du conseil de développement est de cinq ans.
 
@@ -28,17 +28,13 @@ La durée du mandat des membres du conseil de développement est de cinq ans.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R102-24 (Ab)
+	  - Décret n°2017-423 du 28 mars 2017 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L5312-11 (V)
+	  - Code des transports - art. L5312-11
 
 	**Cité par**:
 
