--- a/02. PARTIE REGLEMENTAIRE/Article R5312-38 - 30030596.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5312-38 - 30030596.md
@@ -15,16 +15,15 @@ délibérantes des collectivités territoriales ou groupements concernés. Ils p
 
 Les membres du quatrième collège du conseil de développement sont nommés par arrêté du préfet de région.
 
+A défaut d'avis du président du conseil régional sur les nominations envisagées aux premier et quatrième collèges du conseil
+de développement dans le délai d'un mois à compter de sa saisine par le préfet de région, cet avis est réputé rendu.
+
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R102-26 (Ab)
+	  - Décret n°2017-423 du 28 mars 2017 - art. 1
