--- a/02. PARTIE REGLEMENTAIRE/Article R5341-2 - 30031598.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5341-2 - 30031598.md
@@ -1,18 +1,18 @@
 # Article R5341-2
 
-Par dérogation aux dispositions de l'article R. 5341-1, sont dispensés de l'obligation de pilotage : 
+Par dérogation aux dispositions de l'article R. 5341-1, sont dispensés de l'obligation de pilotage :
 
 1° Les navires, quel que soit leur tonnage, affectés exclusivement à l'amélioration, à l'entretien et à la surveillance des
-ports et de leur accès ainsi qu'au sauvetage ; 
+ports et de leur accès ainsi qu'au sauvetage ;
 
-2° Les navires du service des phares et balises ; 
+2° Les navires du service des phares et balises ;
 
-3° Les navires de guerre à l'entrée et à la sortie des ports militaires, lorsqu'ils sont appelés, pour ce faire, à pénétrer
-dans la zone de pilotage obligatoire d'un port non militaire ; 
+3° Les navires de guerre français à l'entrée et à la sortie des ports militaires, lorsqu'ils sont appelés, pour ce faire, à
+pénétrer dans la zone de pilotage obligatoire d'un port non militaire ;
 
 4° Les navires d'une longueur hors tout inférieure à un certain seuil fixé pour chaque station, en considération des
 conditions locales d'exécution de l'opération de pilotage. La décision portant fixation du seuil est prise par le préfet de
-région après avis de la commission locale prévue à l'article R. 5341-6. Elle est annexée au règlement local de la station ; 
+région après avis de la commission locale prévue à l'article R. 5341-6. Elle est annexée au règlement local de la station ;
 
 5° Abrogé.
 
@@ -24,7 +24,7 @@ région après avis de la commission locale prévue à l'article R. 5341-6. Elle
 
 	**Modifié par**:
 
-	  - Décret n°2015-1789 du 28 décembre 2015 - art. 1
+	  - Décret n°2017-423 du 28 mars 2017 - art. 3
 
 	**Cite**:
 
