--- a/02. PARTIE REGLEMENTAIRE/Article R5713-5 - 30031966.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5713-5 - 30031966.md
@@ -1,18 +1,16 @@
 # Article R5713-5
 
-Les deux premiers alinéas de l'article R. 5312-12 sont remplacés par les dispositions suivantes : 
+Les deux premiers alinéas de l'article R. 5312-12 sont remplacés par les dispositions suivantes :
 
 " Les personnalités qualifiées mentionnées au 4° de l'article L. 5312-7 sont nommées par arrêté du ministre chargé des ports
 maritimes, après consultation du ministre chargé de l'économie et avis des collectivités territoriales et de leur groupement
 dont une partie du territoire est située dans la circonscription du port. A défaut de réponse dans le mois suivant la
-saisine, l'avis est réputé émis. 
+saisine, l'avis est réputé émis.
 
 " Les personnalités qualifiées sont choisies en raison de leur compétence dans les activités intéressant les ports,
-l'aménagement, l'environnement, la navigation maritime, les transports, l'économie régionale ou l'économie nationale. 
+l'aménagement, l'environnement, la navigation maritime, les transports, l'économie régionale ou l'économie nationale.
 
-" Le décret en Conseil d'Etat instituant le grand port désigne la chambre consulaire qui dispose de trois représentants élus
-au conseil de surveillance. Le ministre chargé des ports maritimes invite cette chambre consulaire à proposer ses
-représentants. "
+La chambre de commerce et d'industrie désigne trois représentants au conseil de surveillance du grand port maritime.
 
 **Liens relatifs à cet article**
 
@@ -20,11 +18,11 @@ représentants. "
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2017-423 du 28 mars 2017 - art. 5
 
 	**Cite**:
 
-	  - Code des transports - art. L5312-7 (V)
-	  - Code des transports - art. R5312-12 (V)
+	  - Code des transports - art. L5312-7
+	  - Code des transports - art. R5312-12
