--- a/02. PARTIE REGLEMENTAIRE/Article R1612-2 - 28997003.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1612-2 - 28997003.md
@@ -2,12 +2,12 @@
 
 Les modalités et les conditions d'engagement des travaux mentionnés au 3° de l'article L. 1612-2 concernant les systèmes de
 transport public ferroviaire ou guidé, y compris ceux destinés au transport de personnels, sont déterminés par les
-dispositions pertinentes : 
+dispositions pertinentes :
 
-1° Du décret n° 2003-425 du 9 mai 2003 modifié relatif à la sécurité des transports publics guidés ; 
+1° Du décret n° 2017-440 du 30 mars 2017 relatif à la sécurité des transports publics guidés ;
 
 2° Du décret n° 2006-1279 du 19 octobre 2006 modifié relatif à la sécurité des circulations ferroviaires et à
-l'interopérabilité du système ferroviaire ; 
+l'interopérabilité du système ferroviaire ;
 
 3° De l'article 4 du décret n° 2007-934 du 15 mai 2007 relatif au contrôle technique et de sécurité de l'Etat portant sur les
 remontées mécaniques et les tapis roulants mentionnés à l'article L. 342-17-1 du code du tourisme.
@@ -16,16 +16,16 @@ remontées mécaniques et les tapis roulants mentionnés à l'article L. 342-17-
 
 	**Cite**:
 
-	  - Décret n°2003-425 du 9 mai 2003 (V)
-	  - Décret n°2006-1279 du 19 octobre 2006 (V)
-	  - Décret n°2007-934 du 15 mai 2007 - art. 4 (V)
-	  - Code du tourisme. - art. L342-17-1 (V)
-	  - Code des transports - art. L1612-2 (V)
+	  - Décret n°2003-425 du 9 mai 2003
+	  - Décret n°2006-1279 du 19 octobre 2006
+	  - Décret n°2007-934 du 15 mai 2007 - art. 4
+	  - Code du tourisme. - art. L342-17-1
+	  - Code des transports - art. L1612-2
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-440 du 30 mars 2017 - art. 101
