--- a/02. PARTIE REGLEMENTAIRE/Article R5332-17 - 30031362.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-17 - 30031362.md
@@ -4,34 +4,16 @@ L'organisme de sûreté habilité garantit la confidentialité des faits, inform
 l'exercice de ses missions. 
 
 Il ne confie l'exécution pour son compte des missions définies aux articles R. 5332-13 et R. 5332-14 qu'à des personnes dont
-il garantit les compétences en matière de sûreté maritime et portuaire et qui ont été agréées par le représentant de l'Etat
-dans le département dans lequel est situé le siège social de l'organisme.  Cet agrément, valable sur l'ensemble du territoire
-national, est demandé par l'organisme de sûreté habilité qui établit, pour chaque agent, un dossier dont la composition et
-les modalités de transmission sont fixées par un arrêté conjoint des ministres de la justice, de l'intérieur, de la défense
-et des ministres chargés des transports et des douanes. Cet arrêté définit également la procédure d'agrément. L'agrément est
-délivré à l'issue d'une enquête administrative pour une durée qui ne peut excéder cinq ans. 
-
-L'agrément ne peut être accordé en cas de condamnation criminelle ou correctionnelle incompatible avec les fonctions à
-exercer. Le représentant de l'Etat dans le département s'assure du respect de cette condition en demandant communication du
-bulletin n° 2 du casier judiciaire au casier judiciaire national automatisé par un moyen de télécommunication sécurisé ou de
-son équivalent, s'agissant des ressortissants étrangers, auprès du casier judiciaire de l'Etat de nationalité selon les
-stipulations des conventions internationales en vigueur. 
-
-L'agrément peut être refusé, retiré ou suspendu par le représentant de l'Etat dans le département lorsque la moralité ou le
-comportement de l'intéressé ne présentent pas les garanties requises au regard de la sûreté de l'Etat, de la sécurité
-publique, de la sécurité des personnes, de l'ordre public ou sont incompatibles avec l'exercice des fonctions prévues dans la
-présente sous-section. 
-
-Lorsque les conditions de sa délivrance ne sont plus réunies, l'agrément est retiré par le représentant de l'Etat dans le
-département après que l'intéressé a été mis à même de présenter des observations. 
-
-En cas d'urgence, l'agrément peut être suspendu sans préavis par le représentant de l'Etat dans le département pour une durée
-maximale de deux mois. 
-
-Les décisions d'agrément et celles de retrait ou de suspension d'agrément sont notifiées à l'intéressé et à l'organisme de
-sûreté habilité. 
+il garantit les compétences en matière de sûreté maritime et portuaire et qui ont été agréées dans les conditions prévues à
+l'article R. 5332-56. 
 
 L'agrément ouvre à son détenteur les mêmes droits que l'habilitation mentionnée à l'article R. 5332-39.
+
+**Nota:**
+
+Conformément à l'article 5 du décret n° 2017-438 du 29 mars 2017, les agréments et habilitations délivrés sur le fondement du
+présent article, dans sa rédaction antérieure à l'entrée en vigueur dudit décret, restent valables jusqu'à leur terme, sous
+réserve, le cas échéant, de leur retrait ou de leur suspension, dans les conditions prévues au IV de l'article R. 5332-56.
 
 **Liens relatifs à cet article**
 
@@ -44,6 +26,7 @@ L'agrément ouvre à son détenteur les mêmes droits que l'habilitation mention
 	  - Arrêté du 15 avril 2009 - art. 1 (V)
 	  - Décret n°2017-438 du 29 mars 2017 - art. 5 (V)
 	  - Code des transports - art. R5332-55 (V)
+	  - Code des transports - art. R5332-56 (V)
 	  - Code des transports - art. R5336-2 (M)
 	  - Code des transports - art. R5763-1 (V)
 	  - Code des transports - art. R5773-1 (V)
@@ -51,9 +34,9 @@ L'agrément ouvre à son détenteur les mêmes droits que l'habilitation mention
 
 	**Modifié par**:
 
-	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
+	  - Décret n°2017-438 du 29 mars 2017 - art. 2
 
 	**Cite**:
 
-	  - Code des transports - art. R5332-13 (V)
-	  - Code des transports - art. R5332-39 (M)
+	  - Code des transports - art. R5332-13
+	  - Code des transports - art. R5332-39
