--- a/02. PARTIE REGLEMENTAIRE/Article R5332-32 - 30031400.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-32 - 30031400.md
@@ -1,7 +1,7 @@
 # Article R5332-32
 
-L'exploitant de l'installation portuaire désigne dans la mesure du possible  parmi son personnel, pour une durée maximale de
-cinq ans renouvelable, un agent de sûreté de l'installation portuaire  chargé de préparer et de mettre en œuvre le plan de
+L'exploitant de l'installation portuaire désigne dans la mesure du possible parmi son personnel, pour une durée maximale de
+cinq ans renouvelable, un agent de sûreté de l'installation portuaire chargé de préparer et de mettre en œuvre le plan de
 sûreté de l'installation. Si celle-ci a été qualifiée de point d'importance vitale en application des dispositions de
 l'article R. 1332-4 du code de la défense, cet agent exerce les fonctions de délégué pour la défense et la sécurité prévues à
 l'article R. 1332-6 du même code. 
@@ -9,9 +9,9 @@ l'article R. 1332-6 du même code.
 L'agent de sûreté de l'installation portuaire prend attache avec l'agent de sûreté du port aux fins de s'assurer de la
 cohérence des mesures de sûreté de l'installation portuaire avec l'organisation générale de la sûreté du port. 
 
-La désignation de l'agent de sûreté de l'installation portuaire est subordonnée à la possession d'un agrément délivré par le
-représentant de l'Etat dans le département dans les conditions définies ci-après et d'un certificat d'aptitude dont les
-conditions d'obtention et de délivrance sont définies par un arrêté du ministre chargé des transports. 
+La désignation de l'agent de sûreté de l'installation portuaire est subordonnée à la possession d'un agrément délivré dans
+les conditions prévues à l'article R. 5332-56 et d'un certificat d'aptitude dont les conditions d'obtention et de délivrance
+sont définies par un arrêté du ministre chargé des transports. 
 
 Il est mis fin aux fonctions d'agent de sûreté de l'installation portuaire lorsque l'une de ces conditions n'est plus
 remplie. Afin d'assurer la permanence des fonctions, l'exploitant de l'installation portuaire peut désigner un ou plusieurs
@@ -21,34 +21,13 @@ L'agent de sûreté de l'installation portuaire et ses suppléants garantissent 
 documents dont ils ont connaissance dans l'exercice de leurs missions, notamment de l'évaluation de la sûreté de
 l'installation et des parties sensibles du plan de sûreté. 
 
-L'agrément d'agent de sûreté d'installation portuaire ou de suppléant d'agent de sûreté d'installation portuaire est valable
-sur l'ensemble du territoire national. Il est demandé par l'exploitant de l'installation portuaire qui établit pour chaque
-agent un dossier dont la composition et les modalités de transmission sont fixées par arrêté conjoint des ministres de la
-justice, de l'intérieur et de la défense et des ministres chargé des transports et chargé des douanes. Ce même arrêté définit
-en outre la procédure d'agrément. L'agrément est délivré pour une durée qui ne peut excéder cinq ans, à l'issue d'une enquête
-administrative. 
-
-L'agrément ne peut être accordé en cas de condamnation criminelle ou correctionnelle incompatible avec les fonctions à
-exercer. Le représentant de l'Etat dans le département s'assure du respect de cette condition en demandant communication du
-bulletin n° 2 du casier judiciaire au casier judiciaire national automatisé par un moyen de télécommunication sécurisé ou de
-son équivalent, s'agissant des ressortissants étrangers, auprès du casier judiciaire de l'Etat de nationalité selon les
-stipulations des conventions internationales en vigueur. 
-
-L'agrément peut être refusé, retiré ou suspendu par le représentant de l'Etat dans le département lorsque la moralité ou le
-comportement de l'intéressé ne présentent pas les garanties requises au regard de la sûreté de l'Etat, de la sécurité
-publique, de la sécurité des personnes, de l'ordre public ou sont incompatibles avec l'exercice d'une des fonctions prévues
-au présent article. 
-
-Lorsque les conditions de sa délivrance ne sont plus réunies, l'agrément est retiré par le représentant de l'Etat dans le
-département, après que l'intéressé a été mis à même de présenter des observations. 
-
-En cas d'urgence, l'agrément peut être suspendu sans préavis par le représentant de l'Etat dans le département pour une durée
-maximale de deux mois. 
-
-Les décisions d'agrément et celles de retrait ou de suspension d'agrément sont notifiées à l'intéressé, à l'autorité
-portuaire et à l'exploitant de l'installation portuaire. 
-
 L'agrément ouvre à son détenteur les mêmes droits que l'habilitation mentionnée à l'article R. 5332-39.
+
+**Nota:**
+
+Conformément à l'article 5 du décret n° 2017-438 du 29 mars 2017, les agréments et habilitations délivrés sur le fondement du
+présent article, dans sa rédaction antérieure à l'entrée en vigueur dudit décret, restent valables jusqu'à leur terme, sous
+réserve, le cas échéant, de leur retrait ou de leur suspension, dans les conditions prévues au IV de l'article R. 5332-56.
 
 **Liens relatifs à cet article**
 
@@ -70,10 +49,11 @@ L'agrément ouvre à son détenteur les mêmes droits que l'habilitation mention
 
 	**Modifié par**:
 
-	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
+	  - Décret n°2017-438 du 29 mars 2017 - art. 2
 
 	**Cite**:
 
 	  - Code de la défense. - art. R1332-4
 	  - Code de la défense. - art. R1332-6
 	  - Code des transports - art. R5332-39
+	  - Code des transports - art. R5332-56
