--- a/02. PARTIE REGLEMENTAIRE/Article R5332-48 - 30031442.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5332-48 - 30031442.md
@@ -1,33 +1,15 @@
 # Article R5332-48
 
-Les personnes chargées des visites de sûreté prévues par l'article R. 5332-46 doivent avoir reçu l'agrément du représentant
-de l'Etat dans le département et du procureur de la République territorialement compétent. L'agrément est demandé selon le
-cas par l'exploitant de l'installation portuaire ou par  l'armateur de navire qui constituent à cette fin, pour chaque agent
-qu'ils désignent, un dossier dont la composition et les modalités de transmission sont fixées par arrêté conjoint des
-ministres de la justice, de l'intérieur et de la défense et des ministres chargé des transports et chargé des douanes. Ce
-même arrêté définit par ailleurs la procédure d'agrément. 
+Les personnes chargées des visites de sûreté prévues à l'article R. 5332-46 doivent avoir reçu un agrément dans les
+conditions prévues à l'article R. 5332-56. 
 
-La demande d'agrément au titre du présent article tient lieu de demande d'habilitation au titre de l'article R. 5332-39. 
+L'agrément ouvre à son détenteur les mêmes droits que l'habilitation mentionnée à l'article R. 5332-39.
 
-L'agrément est accordé pour une durée maximale de cinq ans renouvelable à l'issue d'une enquête administrative. 
+**Nota:**
 
-L'agrément ne peut être accordé en cas de condamnation criminelle ou correctionnelle incompatible avec les fonctions à
-exercer. Le représentant de l'Etat dans le département s'assure du respect de cette condition en demandant communication du
-bulletin n° 2 du casier judiciaire au casier judiciaire national automatisé par un moyen de télécommunication sécurisé ou de
-son équivalent pour un ressortissant de l'Union européenne. 
-
-L'agrément est refusé, retiré ou suspendu par le représentant de l'Etat dans le département lorsque la moralité ou le
-comportement de l'intéressé ne présentent pas les garanties requises au regard de la sûreté de l'Etat, de la sécurité
-publique, de la sécurité des personnes, de l'ordre public ou sont incompatibles avec l'exercice d'une activité dans les zones
-d'accès restreint. 
-
-L'agrément est retiré par le représentant de l'Etat dans le département ou par le procureur de la République lorsque les
-conditions de délivrance ne sont plus remplies. L'intéressé est préalablement informé de la mesure envisagée et dispose d'un
-délai de quinze jours pour présenter ses observations, selon le cas, au représentant de l'Etat dans le département ou au
-procureur de la République. 
-
-En cas d'urgence, l'agrément est suspendu sans préavis pour une durée maximale de deux mois par le représentant de l'Etat
-dans le département ou le procureur de la République.
+Conformément à l'article 5 du décret n° 2017-438 du 29 mars 2017, les agréments et habilitations délivrés sur le fondement du
+présent article, dans sa rédaction antérieure à l'entrée en vigueur dudit décret, restent valables jusqu'à leur terme, sous
+réserve, le cas échéant, de leur retrait ou de leur suspension, dans les conditions prévues au IV de l'article R. 5332-56.
 
 **Liens relatifs à cet article**
 
@@ -40,7 +22,8 @@ dans le département ou le procureur de la République.
 	  - Arrêté du 15 avril 2009 - art. 1 (V)
 	  - Arrêté du 23 septembre 2009 - art. 1 (V)
 	  - Décret n°2017-438 du 29 mars 2017 - art. 5 (V)
-	  - Code des transports - art. R5332-50 (V)
+	  - Code des transports - art. R5332-50 (M)
+	  - Code des transports - art. R5332-55 (V)
 	  - Code des transports - art. R5332-56 (V)
 	  - Code des transports - art. R5763-1 (V)
 	  - Code des transports - art. R5773-1 (V)
@@ -48,9 +31,8 @@ dans le département ou le procureur de la République.
 
 	**Modifié par**:
 
-	  - Décret n°2015-1756 du 24 décembre 2015 - art. 1
+	  - Décret n°2017-438 du 29 mars 2017 - art. 2
 
 	**Cite**:
 
 	  - Code des transports - art. R5332-39
-	  - Code des transports - art. R5332-46
