--- a/02. PARTIE REGLEMENTAIRE/Article R5783-1 - 31699183.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5783-1 - 31699183.md
@@ -2,15 +2,25 @@
 
 Les dispositions du chapitre II et du chapitre VI du titre III du livre III sont applicables dans les îles Wallis et Futuna
 dans leur rédaction résultant du décret n°° 2015-1756 du 24 décembre 2015 relatif à la sûreté des ports maritimes sous
-réserve des adaptations prévues à l'article R. 5783-2.
+réserve des adaptations prévues à l'article R. 5783-2. 
+
+Les articles R. 5332-17, R. 5332-25, R. 5332-32, R. 5332-39, R. 5332-48, R. 5332-55 et R. 5332-56 sont applicables dans les
+îles Wallis et Futuna dans leur rédaction résultant du décret n° 2017-438 du 29 mars 2017 relatif aux enquêtes
+administratives en matière de sûreté portuaire.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Décret n°2015-1756 du 24 décembre 2015 (V)
-	  - Code des transports - art. R5783-2 (V)
+	  - Décret n°2015-1756 du 24 décembre 2015
+	  - Code des transports - art. R5332-17
+	  - Code des transports - art. R5332-25
+	  - Code des transports - art. R5332-32
+	  - Code des transports - art. R5332-39
+	  - Code des transports - art. R5332-48
+	  - Code des transports - art. R5332-55
+	  - Code des transports - art. R5783-2
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2015-1756 du 24 décembre 2015 - art. 3
+	  - Décret n°2017-438 du 29 mars 2017 - art. 4
